# glacier-watch

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  README.md  alembic.ini  docker-compose.yaml  makefile  pyproject.toml
.github/workflows/: build.yaml  build_base.yaml
data/kebnekaise/: aoi.geojson  config.yaml  glaciers.geojson
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 037e08bdaff9_add_aoi_to_project.py  b9cd3d641b0a_create_scenes_and_project_tables.py  cb6b5a832aa5_add_glacier_and_analysis.py  db3ee7e5f4f2_glacier_remove_project_id.py
src/controller/: project.py  scene.py
src/dem/: main.py  utils.py
src/discover/: main.py
src/download/: local.py  main.py
src/process/: main.py  processing.py
src/utils/: cog.py  config.py  db.py  dem_stac.py  file.py  geo.py  logger.py  models.py  stac.py
